BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Error_Log_BMS__c.object
<CustomObject>
    <description>Error Log entries for BMS web services integration.</description>
    <fields>
        <fullName>Error_Details__c</fullName>
        <description>Actual System Error</description>
        <inlineHelpText>Actual System Error</inlineHelpText>
        <label>Error Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>BMS-friendly Error Message</description>
        <inlineHelpText>Error Message</inlineHelpText>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Populate this with account id</description>
        <externalId>true</externalId>
        <inlineHelpText>Populate this with account id.</inlineHelpText>
        <label>External ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Error Logs (Related Account)</relationshipLabel>
        <relationshipName>Error_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address to which this error belongs.</description>
        <inlineHelpText>Address to which this error belongs.</inlineHelpText>
        <label>Related Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be automatically checked if the error is resolved.</description>
        <inlineHelpText>Will be automatically checked if the error is resolved.</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resolved__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Details__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Integration_Error_Logs</fullName>
        <columns>NAME</columns>
        <columns>Error__c</columns>
        <columns>Error_Details__c</columns>
        <columns>External_ID__c</columns>
        <columns>Resolved__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Error_Log_BMS__c.general</value>
        </filters>
        <label>Non Integration Error Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Un_Resolved_Integration_Error_Logs</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Resolved__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Address__c</columns>
        <columns>Error_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Error_Log_BMS__c.integration</value>
        </filters>
        <label>Unresolved Integration Error Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <recordTypes>
        <fullName>general</fullName>
        <active>true</active>
        <description>Record type used for general errors</description>
        <label>general</label>
    </recordTypes>
    <recordTypes>
        <fullName>integration</fullName>
        <active>true</active>
        <description>Record type used for integration errors</description>
        <label>integration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>